--- a/style.css
+++ b/style.css
@@ -10,3 +10,24 @@ body { margin: 0; }
   /* black background */
   background-color: #000;
 }
+/* position footer fixed */
+.nav {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  color: #fff;
+  text-align: center;
+  line-height: 50px;
+  > button {
+    margin: 0 10px;
+    padding: 0 10px;
+    height: 30px;
+    border: 0;
+    border-radius: 5px;
+    color: #000;
+    font-weight: bold;
+    cursor: pointer;
+  }
+}
