--- a/src/css/style.css
+++ b/src/css/style.css
@@ -31,3 +31,16 @@ body { margin: 0; }
     cursor: pointer;
   }
 }
+
+.container-index {
+  display: flex; flex-direction: row; align-items: center; justify-content: center; height: 100vh;
+}
+.btn-index {
+  background-color: blue; width: 300px; height: 100px;color:white; font-weight: bold; font-size: 24px; margin: 20px
+}
+.btn-index:hover {
+  background-color: #000; color: white;
+  cursor: pointer;
+}
+```
+```
