--- a/src/css/style.css
+++ b/src/css/style.css
@@ -20,18 +20,18 @@ body { margin: 0; }
   color: #fff;
   text-align: center;
   line-height: 50px;
-  > button {
-    margin: 0 10px;
-    padding: 0 10px;
-    height: 30px;
-    border: 0;
-    border-radius: 5px;
-    color: #000;
-    font-weight: bold;
-    cursor: pointer;
-  }
+  
 }
-
+.nav > button {
+  margin: 0 10px;
+  padding: 0 10px;
+  height: 30px;
+  border: 0;
+  border-radius: 5px;
+  color: #000;
+  font-weight: bold;
+  cursor: pointer;
+}
 .container-index {
   display: flex; flex-direction: row; align-items: center; justify-content: center; height: 100vh;
 }
@@ -42,5 +42,3 @@ body { margin: 0; }
   background-color: #000; color: white;
   cursor: pointer;
 }
-```
-```
